upgpkg: pidgin 2.6.6-1 update to 2.6.6
git-svn-id: file:///srv/repos/svn-packages/svn@69171 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/pidgin/trunk/PKGBUILD
+++ b/pidgin/trunk/PKGBUILD
@@ -1,12 +1,12 @@
 # $Id$
-# Maintainer : Biru Ionut <ionut@archlinux.ro>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Lucien Immink <l.immink@student.fnt.hvu.nl>
 
 pkgbase=('pidgin')
 pkgname=('libpurple' 'pidgin' 'finch')
-pkgver=2.6.5
+pkgver=2.6.6
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://pidgin.im/"
@@ -16,7 +16,7 @@ makedepends=('startup-notification' 'gtkspell' 'libxss' 'nss' 'libsasl' 'python'
 	'tk' 'ca-certificates' 'intltool' 'networkmanager')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.bz2)
-sha256sums=('3c459e4093fca679591e35ea34da4a0e45b15f2bb7ca00314a1486dc022f3d0e')
+sha256sums=('6ebbe9d339246dfebb244e4c855c4feb678f120d1024ef2ee269e2fde77b2ad9')
 
 build() {
     cd "$srcdir/$pkgbase-$pkgver"
