upgpkg: transmission-cli 1.90-1 update to 1.90
git-svn-id: file:///srv/repos/svn-packages/svn@69176 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/transmission-cli/trunk/PKGBUILD
+++ b/transmission-cli/trunk/PKGBUILD
@@ -1,9 +1,10 @@
 # $Id$
-# Maintainer: Alexander Fehr <pizzapunk gmail com>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Contributor: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Alessio 'mOLOk' Bolognino <themolok@gmail.com>
 
 pkgname=transmission-cli
-pkgver=1.83
+pkgver=1.90
 pkgrel=1
 pkgdesc="Fast, easy, and free BitTorrent client (CLI tools, daemon and web client)"
 arch=('i686' 'x86_64')
@@ -17,7 +18,7 @@ install=transmission-cli.install
 source=(http://mirrors.m0k.org/transmission/files/transmission-$pkgver.tar.bz2
         transmissiond
         transmissiond.conf)
-md5sums=('fbdc151040ec64f55c3f28be60a21060'
+md5sums=('91cc216807745a7d287150a6947e9bac'
          '50b7c17300bc8b38f44fb6f681ba05d0'
          '4170b71ad5d6c499a8a16c6e86b77cce')
 
