upgpkg: transmission-gtk 1.90-1 update to 1.90
git-svn-id: file:///srv/repos/svn-packages/svn@69177 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/transmission-gtk/trunk/PKGBUILD
+++ b/transmission-gtk/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id$
-# Maintainer: Alexander Fehr <pizzapunk gmail com>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Contributor: Alexander Fehr <pizzapunk gmail com>
 
 pkgname=transmission-gtk
-pkgver=1.83
+pkgver=1.90
 pkgrel=1
 pkgdesc="Fast, easy, and free BitTorrent client (GTK+ GUI)"
 arch=('i686' 'x86_64')
@@ -14,7 +15,7 @@ optdepends=('notification-daemon: Desktop notification support')
 replaces=('transmission')
 install=transmission-gtk.install
 source=(http://mirrors.m0k.org/transmission/files/transmission-$pkgver.tar.bz2)
-md5sums=('fbdc151040ec64f55c3f28be60a21060')
+md5sums=('91cc216807745a7d287150a6947e9bac')
 
 build() {
   cd "$srcdir/transmission-$pkgver"
