--- a/perl-fcgi/trunk/PKGBUILD
+++ b/perl-fcgi/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: François Charette <firmicus ατ gmx δοτ net>
 
 pkgname=perl-fcgi
-pkgver=0.68
+pkgver=0.69
 pkgrel=1
 pkgdesc="Fast CGI"
 arch=('i686' 'x86_64')
 url="http://search.cpan.org/dist/FCGI"
 license=('GPL' 'PerlArtistic')
-depends=('perl>=5.10.0')
+depends=('perl')
 options=('!emptydirs')
-source=(http://search.cpan.org/CPAN/authors/id/M/MS/MSTROUT/FCGI-$pkgver.tar.gz)
-md5sums=('d336458f5b43c6fd3395cd4ba1914966')
+source=(http://search.cpan.org/CPAN/authors/id/M/MS/MSTROUT/FCGI-${pkgver}.tar.gz)
+md5sums=('6e87311590b1cb5829a38a523931a3f4')
 
 build() {
   cd  "${srcdir}/FCGI-${pkgver}"
