--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,21 +1,21 @@
 # $Id$
-# Maintainer: eric <eric@archlinux.org>
+# Maintainer: Giovanni Scafora <giovanni@archlinux.org>
 # Contributor: Manolis Tzanidakis
 
 pkgname=perl-net-ssleay
 _cpanname=Net-SSLeay
-pkgver=1.35
+pkgver=1.36
 pkgrel=1
 pkgdesc="Perl extension for using OpenSSL"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('custom:BSD')
 url="http://search.cpan.org/dist/${_cpanname}/"
-depends=('perl>=5.10.0' 'openssl')
+depends=('perl' 'openssl')
 options=(!emptydirs)
 replaces=('net-ssleay')
 provides=('net-ssleay')
 source=(http://www.cpan.org/authors/id/F/FL/FLORA/${_cpanname}-${pkgver}.tar.gz)
-md5sums=('1e4ec37a4467eb66a62d3c090ac9029b')
+md5sums=('54061638720dd6a325395331c77f21d8')
 
 build() {
   cd ${srcdir}/${_cpanname}-${pkgver}
