--- a/geeqie/trunk/PKGBUILD
+++ b/geeqie/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Lukas Jirkovsky <l.jirkovsky@gmail.com>
 
 pkgname=geeqie
-pkgver=1.0beta2
-pkgrel=2
+pkgver=1.0
+pkgrel=1
 pkgdesc="A lightweight image browser and viewer (fork of GQview)"
 arch=('i686' 'x86_64')
 url="http://geeqie.sourceforge.net/"
@@ -12,10 +12,9 @@ license=('GPL3')
 depends=('exiv2>=0.18' 'gtk2' 'lcms')
 makedepends=('intltool')
 replaces=('gqview-devel')
-install=geeqie.install
 source=(http://downloads.sourceforge.net/sourceforge/geeqie/${pkgname}-${pkgver}.tar.gz)
-md5sums=('4e4ddc96a83e1d6bc43d478796e0b3c4')
-sha1sums=('2f26de077d90cad5a0499bfd5e8e3908947773de')
+md5sums=('1d67ef990390224c5052697d93bb49c0')
+sha1sums=('8494a557d67d20e6ad720645ec789dd2b33a3266')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
