--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=atk
 pkgver=1.29.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A library providing a set of interfaces for accessibility"
 arch=(i686 x86_64)
 license=('LGPL')
 depends=('glib2>=2.23.3')
-makedepends=('pkgconfig')
+makedepends=('pkgconfig' 'gobject-introspection')
 options=('!libtool')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.29/${pkgname}-${pkgver}.tar.bz2)
 url='http://www.gtk.org/'
