--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=gtk2
 pkgver=2.19.5
-pkgrel=1
+pkgrel=2
 pkgdesc="The GTK+ Toolkit (v2)"
 arch=(i686 x86_64)
 url="http://www.gtk.org/"
 install=gtk2.install
-depends=('atk>=1.29.4' 'pango>=1.26.2' 'libxcursor' 'libxinerama' 'libxrandr>=1.3.0' 'libxi>=1.2.1' 'libxcomposite' 'libxdamage' 'heimdal>=1.3.1' 'gnutls>=2.8.3' 'shared-mime-info' 'cairo>=1.8.8-2' 'libtiff>=3.9.2-2' 'libcups>=1.4.2-3')
-makedepends=('pkgconfig' 'gtk-doc')
+depends=('atk>=1.29.4-2' 'pango>=1.26.2' 'libxcursor' 'libxinerama' 'libxrandr>=1.3.0' 'libxi>=1.2.1' 'libxcomposite' 'libxdamage' 'heimdal>=1.3.1' 'gnutls>=2.8.3' 'shared-mime-info' 'cairo>=1.8.8-2' 'libtiff>=3.9.2-2' 'libcups>=1.4.2-3')
+makedepends=('pkgconfig' 'gtk-doc' 'gobject-introspection')
 replaces=('gtkprint-cups' 'gail')
 conflicts=('gtkprint-cups' 'gail')
 provides=('gail=1.22.3')
