--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,18 +1,19 @@
 # $Id$
-# Maintainer: Biru Ionut <ionut@archlinux.ro>
+# Maintainer: Ionut Biru <ibiru@archlinux.org>
 # Contributor: Bjorn Lindeijer <bjorn lindeijer nl>
 # Contributor: Samuel Mendes <heka.lok@gmail.com>
 pkgname=telepathy-idle
-pkgver=0.1.5
+pkgver=0.1.6
 pkgrel=1
 pkgdesc="An IRC connection manager for Telepathy"
 arch=('i686' 'x86_64')
 url="http://telepathy.freedesktop.org"
 groups=('telepathy')
 license=('LGPL')
-depends=('telepathy-glib>=0.9.1' 'openssl')
+depends=('telepathy-glib>=0.10' 'openssl')
 makedepends=('libxslt')
 source=(http://telepathy.freedesktop.org/releases/telepathy-idle/$pkgname-$pkgver.tar.gz)
+md5sums=('0efe17425cdc3490714947ff68003bf6')
 
 build() {
     cd "$srcdir/$pkgname-$pkgver"
@@ -21,4 +22,3 @@ build() {
     make || return 1
     make DESTDIR="$pkgdir" install || return 1
 }
-md5sums=('b7516b9d199ef34949cf402e04f89881')
