--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,21 +1,18 @@
 # $Id$
-# Maintainer: Hugo Doria <hugo@archlinux.org>
-# Previous Maintainer: Geoffroy Carrier <geoffroy.carrier@aur.archlinux.org>
-# Previous Maintainer: Bjorn Lindeijer <bjorn lindeijer nl>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Contributor: Hugo Doria <hugo@archlinux.org>
 # Contributor: Andrea Scarpino <bash.lnx@gmail.com>
-# Contributor: tardo <tardo@nagi-fanboi.net>
 
 pkgname=libtorrent-rasterbar
-pkgver=0.14.8
+pkgver=0.14.9
 pkgrel=1
 pkgdesc="A C++ library that aims to be a good alternative to all the other bittorrent implementations around"
 url="http://www.rasterbar.com/products/libtorrent/"
 arch=('i686' 'x86_64')
 license=('custom')
 depends=('libsigc++2.0' 'boost>=1.41.0' 'python>=2.6')
-conflicts=('rb_libtorrent')
-provides=('rb_libtorrent')
 source=(http://libtorrent.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
+md5sums=('7a7d802783731c1028ac3f22038be61a')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -28,4 +25,3 @@ build() {
   make DESTDIR="${pkgdir}" install || return 1
   install -D COPYING "${pkgdir}/usr/share/licenses/$pkgname/LICENSE"
 }
-md5sums=('3fae9934b74e2ddf2c50c1f0ec320d75')
