upgpkg: brasero 2.29.90-2 Add introspection data
git-svn-id: file:///srv/repos/svn-packages/svn@69266 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/brasero/trunk/PKGBUILD
+++ b/brasero/trunk/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=brasero
 pkgver=2.29.90
-pkgrel=1
+pkgrel=2
 pkgdesc="A disc burning application for Gnome"
 arch=('i686' 'x86_64')
 url="http://www.gnome.org/projects/brasero"
 license=('GPL')
 options=('!libtool' '!emptydirs')
 depends=('gstreamer0.10-base-plugins>=0.10.26' 'totem-plparser>=2.29.1' 'libbeagle>=0.3.9' 'cdrkit' 'cdrdao' 'desktop-file-utils' 'hicolor-icon-theme' 'libunique>=1.1.6' 'gconf>=2.28.0' 'libcanberra') 
-makedepends=('gnome-doc-utils>=0.18.0' 'intltool' 'libburn' 'libisofs' 'nautilus')
+makedepends=('gnome-doc-utils>=0.18.0' 'intltool' 'libburn' 'libisofs' 'nautilus' 'gobject-introspection')
 optdepends=('libburn: alternative back-end'
             'libisofs: libburn back-end'
             'dvdauthor: video project'
