--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,23 +2,24 @@
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 
 pkgname=goffice
-pkgver=0.6.5
-pkgrel=2
+pkgver=0.8.0
+pkgrel=1
 pkgdesc="A library of document-centric objects and utilities built on top of GLib and Gtk+"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
+url="http://www.gnome.org"
 license=('GPL')
 depends=('libgnomeui>=2.24' 'libgsf-gnome>=1.14')
 makedepends=('perlxml' 'pkgconfig' 'intltool')
 optdepends=('libxml2' 'libsm' 'gtk2' 'popt')
-url="http://www.gnome.org"
-options=(!libtool)
+options=('!libtool')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ab0cf11995b7750f26112669cedf6707')
+md5sums=('afb3fcb152fb37ed433f30d1ed1e86e3')
+sha1sums=('8a5540f91cb1619ee1d96ee65856e81624743acd')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
-              --localstatedir=/var --disable-static
+              --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR="${pkgdir}" install || return 1
 }
