upgpkg: wine 1.1.39-1 update to 1.1.39
git-svn-id: file:///srv/repos/svn-packages/svn@69299 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/wine/trunk/PKGBUILD
+++ b/wine/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=wine
-pkgver=1.1.38
+pkgver=1.1.39
 pkgrel=1
 pkgdesc="A compatibility layer for running Windows programs"
 url="http://www.winehq.com"
@@ -15,15 +15,10 @@ makedepends=('cups' 'sane' 'fontforge' 'flex' 'bison' 'libgphoto2'
              'libxinerama' 'esound' 'giflib' 'ncurses' 'libxcomposite' 'samba' \
              'libxpm' 'libxmu' 'libxxf86vm' 'perl' 'libxml2')
 optdepends=("cups" "sane" "libgphoto2" "alsa-lib" "giflib" "libpng")
-source=(http://ibiblio.org/pub/linux/system/emulators/${pkgname}/${pkgname}-${pkgver}.tar.bz2
-	libpng14.patch)
-md5sums=('ef5947bcb9667b75b8de4a2ce16d0ec2'
-         '51f78b18168d5abd78411e9e66458d55')
-
+source=(http://ibiblio.org/pub/linux/system/emulators/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('cbde85e50db653f54fe9da34be4a6de5')
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-
-  patch -Np1 -i "${srcdir}/libpng14.patch" || return 1
 
   ./configure --prefix=/usr \
               --sysconfdir=/etc \
