upgpkg: libusb 0.1.12-4 add 'sh' dep for libusb-config script
git-svn-id: file:///srv/repos/svn-packages/svn@69309 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libusb/trunk/PKGBUILD
+++ b/libusb/trunk/PKGBUILD
@@ -5,12 +5,12 @@
 pkgname=libusb
 pkgver=0.1.12
 pkgrel=4
-depends=('gcc-libs')
 pkgdesc="Library to enable user space application programs to communicate with USB devices"
 arch=('i686' 'x86_64')
+groups=('base')
+depends=('gcc-libs' 'sh')
 url="http://libusb.sourceforge.net/"
 license=('LGPL')
-groups=('base')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
 md5sums=('caf182cbc7565dac0fd72155919672e6')
 options=('!libtool')
