--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,12 +5,12 @@
 pkgname=libusb
 pkgver=0.1.12
 pkgrel=4
-depends=('gcc-libs')
 pkgdesc="Library to enable user space application programs to communicate with USB devices"
 arch=('i686' 'x86_64')
+groups=('base')
+depends=('gcc-libs' 'sh')
 url="http://libusb.sourceforge.net/"
 license=('LGPL')
-groups=('base')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
 md5sums=('caf182cbc7565dac0fd72155919672e6')
 options=('!libtool')
