--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: Marco Lima <cipparello gmail com>
 
 pkgname=nfs-utils
-pkgver=1.2.1
-pkgrel=3
+pkgver=1.2.2
+pkgrel=1
 pkgdesc="Support programs for Network File Systems"
 arch=('i686' 'x86_64')
 url='http://nfs.sourceforge.net'
@@ -27,10 +27,9 @@ source=(http://downloads.sourceforge.net/nfs/${pkgname}-${pkgver}.tar.bz2
 	nfs-utils-1.1.6-no_libgssapi.patch
 	nfs-utils-1.1.6-heimdal_functions.patch
 	nfs-utils-1.1.4-mtab-sym.patch
-	nfs-utils-1.1.4-no-exec.patch
-	fix-nfsd-startup-1.2.1.patch)
+	nfs-utils-1.1.4-no-exec.patch)
 install=nfs-utils.install
-md5sums=('c3ccd16c147befd49fe4541a506dd177'
+md5sums=('dad92f64db3266c7757f71bb53ee8f35'
          '990a07943fa958d4abb1cb7bd52c9a7b'
          'f73f197a16b02c3e248488ec35c4cf43'
          '5ae080f6117cef3140f02bc162bdc755'
@@ -42,8 +41,7 @@ md5sums=('c3ccd16c147befd49fe4541a506dd177'
          '20c6fae1c771b9d8e91c4973f16372e3'
          'e6fd3a8acfe97970a53db1b902c34f45'
          '7674106eaaa4c149bccd4f05fe3604e9'
-         '4f4827dfc93008dfadd0a530ad0872b2'
-         '0709195356cf23d322539c780c626d9a')
+         '4f4827dfc93008dfadd0a530ad0872b2')
 
 build() {
   cd $srcdir/${pkgname}-${pkgver}
@@ -54,10 +52,6 @@ build() {
   patch -Np0 -i ../nfs-utils-1.1.6-heimdal_functions.patch || return 1
   patch -Np1 -i ../nfs-utils-1.1.4-mtab-sym.patch || return 1
   patch -Np1 -i ../nfs-utils-1.1.4-no-exec.patch || return 1
-  # fix nfsd startup if interfaces are not ready, fixed in upcoming 1.2.2
-  # http://bugs.archlinux.org/task/17738
-  # http://git.linux-nfs.org/?p=steved/nfs-utils.git;a=commit;h=2905358524c0835311501bad04c521479b0525ff
-  patch -Np1 -i ../fix-nfsd-startup-1.2.1.patch || return 1
 
   # arch specific patch
   patch -Np0 -i $srcdir/start-statd.patch || return 1
