upgpkg: gossip 0.28-3 rebuild to remove .FILELIST, tidy up PKGBUILD
git-svn-id: file:///srv/repos/svn-packages/svn@69324 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gossip/trunk/PKGBUILD
+++ b/gossip/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=gossip
 pkgver=0.28
-pkgrel=2
+pkgrel=3
 pkgdesc="A GNOME Jabber client"
 arch=('i686' 'x86_64')
 url="http://www.imendio.com/projects/gossip/"
@@ -20,7 +20,7 @@ md5sums=('2c364a3fffec0fb57c71b6dbab6fa53a'
          '7ed8dc152e4bb36bdb73e7e8e56b22b9')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
 
   export CFLAGS="${CFLAGS} -DLM_NO_DEBUG"
   ./configure --prefix=/usr --sysconfdir=/etc \
@@ -33,13 +33,13 @@ build() {
               --enable-aspell=yes
   make || return 1
   make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 \
-       DESTDIR=${startdir}/pkg install
+       DESTDIR=${pkgdir} install
 
-  mkdir -p ${startdir}/pkg/usr/share/gconf/schemas  
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas \
-    ${startdir}/pkg/etc/gconf/schemas/*.schemas
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -dm755 ${pkgdir}/usr/share/gconf/schemas  
+  gconf-merge-schema ${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas \
+    ${pkgdir}/etc/gconf/schemas/*.schemas
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 
-  install -Dm644 ${startdir}/src/org.gnome.Gossip.service \
-    ${startdir}/pkg/usr/share/dbus-1/services/org.gnome.Gossip.service
+  install -Dm644 ${srcdir}/org.gnome.Gossip.service \
+    ${pkgdir}/usr/share/dbus-1/services/org.gnome.Gossip.service
 }
