--- a/ndiswrapper/trunk/PKGBUILD
+++ b/ndiswrapper/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 
 pkgname=ndiswrapper
 _kernver=2.6.32-ARCH
-pkgver=1.55
-pkgrel=4
+pkgver=1.56
+pkgrel=1
 pkgdesc="Module for NDIS (Windows Network Drivers) drivers supplied by vendors. For stock arch 2.6 kernel."
 license=('GPL')
 arch=(i686 x86_64)
@@ -12,13 +12,12 @@ url="http://ndiswrapper.sourceforge.net"
 install="ndiswrapper.install"
 depends=("ndiswrapper-utils=$pkgver" 'kernel26>=2.6.32.3' 'kernel26<2.6.33')
 makedepends=('kernel26-headers>=2.6.32' 'kernel26-headers<2.6.33')
-source=(http://downloads.sourceforge.net/sourceforge/ndiswrapper/ndiswrapper-$pkgver.tar.gz
-        kernel-2.6.31.patch)
+source=(http://downloads.sourceforge.net/sourceforge/ndiswrapper/ndiswrapper-$pkgver.tar.gz)
+md5sums=('1431f7ed5f8e92e752d330bbb3aed333')
 
 build()
 {
   cd $srcdir/ndiswrapper-$pkgver/driver
-  patch -Np1 -i ../../kernel-2.6.31.patch || return 1
   make KVERS=$_kernver || return 1
   make DESTDIR=$pkgdir KVERS=$_kernver install || return 1
   rm $pkgdir/lib/modules/$_kernver/modules.* #wtf?
@@ -30,5 +29,3 @@ build()
   rm -r $pkgdir/lib/modules/$_kernver/misc/
 }
 
-md5sums=('aa423a46aff97bd0a830e43d546f2b0e'
-         '2f2edd27858ee5e64e28a7718acf4b00')
