--- a/ndiswrapper-utils/trunk/PKGBUILD
+++ b/ndiswrapper-utils/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 #Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=ndiswrapper-utils
-pkgver=1.55
+pkgver=1.56
 pkgrel=1
 pkgdesc="Binaries for ndiswrapper module"
 arch=(i686 x86_64)
@@ -11,16 +11,12 @@ url="http://ndiswrapper.sourceforge.net"
 depends=(wireless_tools glibc)
 replaces=('ndiswrapper-bin')
 conflicts=('ndiswrapper-bin')
-source=(http://downloads.sourceforge.net/ndiswrapper/ndiswrapper-$pkgver.tar.gz
-	module-init-tools.patch)
-md5sums=('aa423a46aff97bd0a830e43d546f2b0e'
-         '35751aea4aba80520f1310d8639dbfb9')
+source=(http://downloads.sourceforge.net/ndiswrapper/ndiswrapper-$pkgver.tar.gz)
+md5sums=('1431f7ed5f8e92e752d330bbb3aed333')
 
 build()
 {
   cd $startdir/src/ndiswrapper-$pkgver/utils
-  # fix module init tools config file
-  patch -Np1 -i ../../module-init-tools.patch || return 1
   make || return 1
   make DESTDIR=$startdir/pkg install
 }
