--- a/bs/trunk/PKGBUILD
+++ b/bs/trunk/PKGBUILD
@@ -1,8 +1,10 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: 
+# Contributor damir <damir@archlinux.org>
+
 pkgname=bs
 pkgver=2.7
-pkgrel=1
+pkgrel=2
 pkgdesc="The classic game of Battleships against the computer. Ncurses."
 arch=('i686' 'x86_64')
 url="http://www.catb.org/~esr/bs/"
@@ -12,14 +14,13 @@ source=($url/$pkgname-$pkgver.tar.gz)
 md5sums=('5786c6006e503d100e65139dadb5d5a7')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver
   ./configure --prefix=/usr
   make || return 1
+}
 
-  mkdir -p $startdir/pkg/usr/bin
-  cp bs $startdir/pkg/usr/bin
-
-  mkdir -p $startdir/pkg/usr/share/man/man6
-  cp bs.6 $startdir/pkg/usr/share/man/man6/bs.6
-
+package() {
+  cd $srcdir/$pkgname-$pkgver
+  install -Dm755 bs $pkgdir/usr/bin/bs
+  install -Dm644 bs.6 $pkgdir/usr/share/man/man6/bs.6
 }
