--- a/which/trunk/PKGBUILD
+++ b/which/trunk/PKGBUILD
@@ -1,24 +1,27 @@
 # $Id$
-# Maintainer: Andreas Radke <andyrtr@archlinux.org>
+# Maintainer: Allan McRae <allan@archlinux.org>
+# Contributor: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=which
 pkgver=2.20
-pkgrel=1
+pkgrel=2
 pkgdesc="A utility to show the full path of commands"
 arch=('i686' 'x86_64')
 url="http://www.xs4all.nl/~carlo17/which"
 license=('GPL3')
-install=which.install
 groups=('base')
-depends=('glibc' 'texinfo')
+depends=('glibc')
+install=which.install
 source=(http://www.xs4all.nl/~carlo17/$pkgname/$pkgname-$pkgver.tar.gz)
 md5sums=('95be0501a466e515422cde4af46b2744')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver
   ./configure --prefix=/usr
   make || return 1
-  make DESTDIR=$startdir/pkg install
+}
 
-  rm -f ${pkgdir}/usr/share/info/dir
+package() {
+  cd $srcdir/$pkgname-$pkgver
+  make DESTDIR=$pkgdir install
 }
