upgpkg: sawfish 1.6.2-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@69373 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/sawfish/trunk/PKGBUILD
+++ b/sawfish/trunk/PKGBUILD
@@ -2,27 +2,28 @@
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 
 pkgname=sawfish
-pkgver=1.6.1
+pkgver=1.6.2
 pkgrel=1
 pkgdesc="An extensible window manager using a Lisp-based scripting language"
 url="http://sawfish.wikia.com/"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
-depends=('librep' 'esd' 'gtk2' 'rep-gtk' 'libsm' 'gmp')
-source=(http://downloads.sourceforge.net/sourceforge/sawmill/sawfish-$pkgver.tar.bz2)
-md5sums=('3200deb3428a5973d71e98b291f5247b')
+depends=('rep-gtk' 'libsm')
 install=sawfish.install
-
+source=(http://download.tuxfamily.org/${pkgname}/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('dc9c9391aa46d8de193054ba86d37ea3')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr --enable-capplet --libexecdir=/usr/lib/
+  cd "${srcdir}/${pkgname}-${pkgver}"
+
+  ./configure --prefix=/usr \
+              --libexecdir=/usr/lib
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR="${pkgdir}" install || return 1
   # info stuff
-  rm $startdir/pkg/usr/share/info/dir
-  gzip -9nf $startdir/pkg/usr/share/info/*
-  mkdir -p $startdir/pkg/etc/X11/sessions/
-  cp $startdir/src/$pkgname-$pkgver/sawfish.desktop \
-      $startdir/pkg/etc/X11/sessions/
+  rm ${pkgdir}/usr/share/info/dir
+  gzip -9nf ${pkgdir}/usr/share/info/*
+  mkdir -p ${pkgdir}/etc/X11/sessions/
+  cp ${srcdir}/${pkgname}-${pkgver}/sawfish.desktop \
+     ${pkgdir}/etc/X11/sessions/
 }
