--- a/perl-text-iconv/trunk/PKGBUILD
+++ b/perl-text-iconv/trunk/PKGBUILD
@@ -1,11 +1,11 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: 
 # Contributor: Francois Charette <firmicus@gmx.net>
 
 pkgname=perl-text-iconv
 _realname=Text-Iconv
 pkgver=1.7
-pkgrel=2
+pkgrel=3
 pkgdesc="Interface to iconv codeset conversion"
 arch=('i686' 'x86_64')
 url="http://search.cpan.org/dist/${_realname}/"
@@ -16,10 +16,8 @@ source=(http://www.cpan.org/authors/id/M/MP/MPIOTR/${_realname}-${pkgver}.tar.gz
 md5sums=('81b26e069eaebb084e91ea3c009b67ae')
 
 build() {
-  cd  ${startdir}/src/${_realname}-${pkgver}
+  cd  ${srcdir}/${_realname}-${pkgver}
   perl Makefile.PL INSTALLDIRS=vendor || return 1
   make  || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  find ${startdir}/pkg -name '.packlist' -delete
-  find ${startdir}/pkg -name '*.pod' -delete
+  make DESTDIR=${pkgdir} install || return 1
 }
