--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-appconfig
 _realname=AppConfig
 pkgver=1.66
-pkgrel=2
+pkgrel=3
 pkgdesc="Perl/CPAN AppConfig module - Read configuration files and parse command line arguments"
-arch=(i686 x86_64)
+arch=('any')
 license=('PerlArtistic' 'GPL')
 url="http://search.cpan.org/dist/${_realname}/"
 depends=('perl>=5.10.0')
@@ -16,14 +16,9 @@ source=(http://www.cpan.org/authors/id/A/AB/ABW/${_realname}-${pkgver}.tar.gz)
 md5sums=('21aa4d1bf70a49a94c2dc9293389b3a0')
 
 build() {
-  cd ${startdir}/src/${_realname}-${pkgver}
+  cd ${srcdir}/${_realname}-${pkgver}
   # install module in vendor directories.
   perl Makefile.PL INSTALLDIRS=vendor || return 1
   make  || return 1
-  make install DESTDIR=${startdir}/pkg || return 1
-
-  # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  make install DESTDIR=${pkgdir} || return 1
 }
-# vim: ts=2 sw=2 et ft=sh
