--- a/perl-file-desktopentry/trunk/PKGBUILD
+++ b/perl-file-desktopentry/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 pkgname=perl-file-desktopentry
 _realname=File-DesktopEntry
 pkgver=0.04
-pkgrel=2
+pkgrel=3
 pkgdesc='Object to handle .desktop files'
-arch=(i686 x86_64)
+arch=('any')
 license=('GPL' 'PerlArtistic')
 url="http://search.cpan.org/dist/${_realname}/"
 depends=('perl>=5.10.0')
@@ -15,13 +15,9 @@ source=(http://search.cpan.org/CPAN/authors/id/P/PA/PARDUS/${_realname}/${_realn
 md5sums=('fc196bc1a4d6ca84953fee5a9cdaa629')
 
 build() {
-  cd $startdir/src/${_realname}-$pkgver
+  cd ${srcdir}/${_realname}-$pkgver
   # install module in vendor directories.
   PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor || return 1
   make  || return 1
-  make install DESTDIR=${startdir}/pkg || return 1
-
-  # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  make install DESTDIR=${pkgdir} || return 1
 }
