--- a/perl-file-tail/trunk/PKGBUILD
+++ b/perl-file-tail/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 pkgname=perl-file-tail
 _realname=File-Tail
 pkgver=0.99.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Perl/CPAN File::Tail module for reading from continously updated files"
-arch=(i686 x86_64)
+arch=('any')
 license=('PerlArtistic')
 url="http://search.cpan.org/dist/${_realname}/"
 depends=('perl>=5.10.0')
@@ -15,13 +15,9 @@ source=(http://search.cpan.org/CPAN/authors/id/M/MG/MGRABNAR/${_realname}-$pkgve
 md5sums=('ef0fb7bcb4181ba593f4a09940f61d1c')
 
 build() {
-  cd $startdir/src/${_realname}-$pkgver
+  cd $srcdir/${_realname}-$pkgver
   # install module in vendor directories.
   perl Makefile.PL INSTALLDIRS=vendor || return 1
   make  || return 1
-  make install DESTDIR=${startdir}/pkg || return 1
-
-  # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  make install DESTDIR=${pkgdir} || return 1
 }
