upgpkg: fsarchiver 0.6.8-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@69397 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/fsarchiver/trunk/PKGBUILD
+++ b/fsarchiver/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=fsarchiver
-pkgver=0.6.7
+pkgver=0.6.8
 pkgrel=1
 pkgdesc="A safe and flexible file-system backup and deployment tool"
 arch=('i686' 'x86_64')
@@ -12,12 +12,12 @@ url="http://www.fsarchiver.org/"
 license=('GPL')
 depends=('bzip2' 'e2fsprogs' 'lzo2' 'xz-utils' 'libgcrypt')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('c7f243de54647b4ad694526c340300b4')
+md5sums=('8416ac1847d5dde5ee513a286129f336')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
   ./configure --prefix=/usr
   make || return 1
-  make DESTDIR="$pkgdir" install
+  make DESTDIR="${pkgdir}" install || return 1
 }
