--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,26 +4,23 @@
 
 pkgname=xfce4-cpufreq-plugin
 pkgver=0.0.1
-pkgrel=6
+pkgrel=7
 pkgdesc="CPU frequency plugin for the Xfce4 panel"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-cpufreq-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel')
-replaces=('xfce4-cpu-freq-plugin')
-conflicts=('xfce4-cpu-freq-plugin')
-provides=('xfce4-cpu-freq-plugin')
-makedepends=('pkgconfig')
+makedepends=('pkgconfig' 'perlxml')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('7ad41541d8065aab941de7d62857aa8b')
 
 build() {
-  cd ${startdir}/src/xfce4-cpu-freq-plugin-${pkgver}
+  cd ${srcdir}/xfce4-cpu-freq-plugin-${pkgver}
   ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
     --localstatedir=/var --disable-static
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR=${pkgdir} install
 }
