upgpkg: acidrip 0.14-7 rebuild to remove .FILELIST, convert to arch=any, get bin dir correct when using latest perl
git-svn-id: file:///srv/repos/svn-packages/svn@69420 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/acidrip/trunk/PKGBUILD
+++ b/acidrip/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=acidrip
 pkgver=0.14
-pkgrel=6
+pkgrel=7
 pkgdesc="A Gtk2::Perl application for ripping and encoding DVD's"
-license=('GPL')
-arch=(i686 x86_64)
+arch=('any')
 url="http://untrepid.com/acidrip/"
+license=('GPL')
 depends=('mplayer' 'lsdvd' 'lame' 'libdvdcss' 'gtk2-perl' 'perl>=5.10.0')
 source=(ftp://ftp.archlinux.org/other/acidrip/$pkgname-$pkgver.tar.gz
         http://untrepid.com/acidrip/acidrip-icon4bit.png
@@ -18,19 +18,15 @@ options=(!emptydirs)
 
 build()
 {
-  cd $startdir/src/$pkgname-$pkgver
-  patch -up1 < ../crop-fixes.patch || return 1
+  cd $srcdir/$pkgname-$pkgver
+  patch -up1 < $srcdir/crop-fixes.patch || return 1
   # install module in vendor directories.
-  perl Makefile.PL INSTALLDIRS=vendor || return 1
+  perl Makefile.PL INSTALLDIRS=vendor INSTALLVENDORSCRIPT=/usr/bin || return 1
   make  || return 1
-  make install DESTDIR=${startdir}/pkg || return 1
+  make install DESTDIR=${pkgdir} || return 1
 
-  install -D -m644 ${startdir}/src/acidrip-icon4bit.png \
-      ${startdir}/pkg/usr/share/pixmaps/acidrip.png
-  install -D -m644 ${startdir}/src/acidrip.desktop \
-      ${startdir}/pkg/usr/share/applications/acidrip.desktop
-
-  # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  install -Dm644 ${srcdir}/acidrip-icon4bit.png \
+      ${pkgdir}/usr/share/pixmaps/acidrip.png
+  install -D -m644 ${srcdir}/acidrip.desktop \
+      ${pkgdir}/usr/share/applications/acidrip.desktop
 }
