upgpkg: fwbuilder 3.0.7-3 Rebuilt against net-snmp 5.5
git-svn-id: file:///srv/repos/svn-packages/svn@69454 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/fwbuilder/trunk/PKGBUILD
+++ b/fwbuilder/trunk/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=fwbuilder
 pkgver=3.0.7
-pkgrel=2
+pkgrel=3
 pkgdesc="Object-oriented GUI and set of compilers for various firewall platforms"
 arch=(i686 x86_64)
 license=('GPL')
-depends=("libfwbuilder>=${pkgver}" 'qt>=4.3')
+depends=("libfwbuilder>=${pkgver}" 'qt>=4.3' 'net-snmp')
 source=(http://downloads.sourceforge.net/sourceforge/fwbuilder/${pkgname}-${pkgver}.tar.gz)
 url="http://www.fwbuilder.org/"
 md5sums=('03ae055da1aea1c8a09b8ce51fbf8d7d')
