upgpkg: povray 3.6.1-8 remove unneeded gcc dep
git-svn-id: file:///srv/repos/svn-packages/svn@69571 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/povray/trunk/PKGBUILD
+++ b/povray/trunk/PKGBUILD
@@ -6,12 +6,12 @@
 pkgname=povray
 pkgver=3.6.1
 _majorver=3.6
-pkgrel=7
+pkgrel=8
 pkgdesc="A script based raytracer for high-quality three-dimensional graphics"
 arch=('i686' 'x86_64')
 license=('custom')
 url="http://povray.org"
-depends=('gcc' 'zlib' 'libjpeg' 'libtiff' 'libpng' 'libxpm')
+depends=('zlib' 'libjpeg' 'libtiff' 'libpng' 'libxpm')
 backup=('etc/povray.conf' 'etc/povray.ini')
 source=(ftp://ftp.povray.org/pub/povray/Official/Unix/$pkgname-$pkgver.tar.bz2 
   libpng-1.4.patch povray-3.6.1-use-system-libpng.patch)
