upgpkg: libgdata 0.6.2-1 Update to 0.6.2, Add introspection data
git-svn-id: file:///srv/repos/svn-packages/svn@69630 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libgdata/trunk/PKGBUILD
+++ b/libgdata/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libgdata
-pkgver=0.4.0
+pkgver=0.6.2
 pkgrel=1
 pkgdesc="GLib-based library for accessing online service APIs using the GData protocol"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libsoup-gnome>=2.27.91')
-makedepends=('pkgconfig' 'intltool')
+depends=('libsoup-gnome>=2.29.90')
+makedepends=('pkgconfig' 'intltool' 'gir-repository')
 url="http://www.gnome.org"
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.4/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('55c616b0761faaa9fb028434de97b02d5145dfc52b1db632671ebc6cc6905575')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.6/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('a6b492133a92ec5e3b457b8e6c74a3fec72cfc1ac6e4421b82f6be0458738e88')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
