Add optdepends for all plugins
git-svn-id: file:///srv/repos/svn-packages/svn@69636 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/totem/trunk/PKGBUILD
+++ b/totem/trunk/PKGBUILD
@@ -26,15 +26,22 @@ build() {
 
 package_totem() {
   pkgdesc="A GNOME2 integrated movie player based on Gstreamer."
-  depends=('gstreamer0.10-base-plugins>=0.10.26' 'gstreamer0.10-good-plugins>=0.10.18' 'totem-plparser>=2.29.1' 'libxxf86vm' 'libxtst' 'desktop-file-utils' 'iso-codes>=3.10.1' 'libepc>=0.3.10' 'python>=2.6'  'libgdata>=0.6.2' 'libunique>=1.1.6')
+  depends=('gstreamer0.10-base-plugins>=0.10.26' 'gstreamer0.10-good-plugins>=0.10.18' 'totem-plparser>=2.29.1' 'libxxf86vm' 'libxtst' 'desktop-file-utils' 'iso-codes>=3.10.1' 'python>=2.6' 'libunique>=1.1.6')
   groups=('gnome-extra')
   install=totem.install
   optdepends=('gstreamer0.10-ugly-plugins: Extra media codecs'
               'gstreamer0.10-bad-plugins: Extra media codecs'
-              'gstreamer0.10-ffmpeg: Extra media codecs')
-              'httplib2: BBC iPlayer'
-              'python-feedparser: BBC iPlayer'
-              'beautiful-soup: BBC iPlayer')
+              'gstreamer0.10-ffmpeg: Extra media codecs'
+              'httplib2: BBC iPlayer plugin'
+              'python-feedparser: BBC iPlayer plugin'
+              'beautiful-soup: BBC iPlayer plugin'
+              'coherence: Coherence DLNA/UPnP Client plugin'
+              'dbus-python: D-Bus Service plugin'
+              'gromit: Gromit Annotations plugin'
+              'lirc-utils: Infrared Remote Control plugin'
+              'libepc: Publish Playlist plugin'
+              'pyxdg: Subtitle Downloader plugin'
+              'libgdata: YouTube Browser plugin')
   conflicts=('totem-xine')
   replaces=('totem-xine')
 
