--- a/gvim/trunk/PKGBUILD
+++ b/gvim/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=gvim
 _srcver=7.2
-_patchlevel=359
+_patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
 pkgrel=1
 pkgdesc="the vim text editor with advanced features enabled, such as a gui mode"
@@ -36,7 +36,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --with-x=yes --disable-gpm --enable-gui=gtk2 \
     --enable-multibyte --enable-cscope --enable-netbeans \
-    --enable-perlinterp --enable-pythoninterp --disable-rubyinterp
+    --enable-perlinterp --enable-pythoninterp --enable-rubyinterp
 
   make || return 1
 }
