--- a/xz-utils/trunk/PKGBUILD
+++ b/xz-utils/trunk/PKGBUILD
@@ -16,6 +16,9 @@ options=('!libtool')
 source=("http://tukaani.org/xz/xz-${pkgver}.tar.gz")
 md5sums=('f2073579b6da2fe35d453adee1aaf1b2')
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 build() {
 	cd $srcdir/xz-$pkgver
 
