keep .pkg.tar.gz for a while
git-svn-id: file:///srv/repos/svn-packages/svn@69708 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libarchive/trunk/PKGBUILD
+++ b/libarchive/trunk/PKGBUILD
@@ -16,6 +16,9 @@ source=(http://libarchive.googlecode.com/files/libarchive-$pkgver.tar.gz)
 # the missing symbols inside the libarchive .a static lib, but that is dirty)
 options=(libtool)
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 build() {
   cd $startdir/src/$pkgname-$pkgver
   ./configure --prefix=/usr --without-xml2
