keep .pkg.tar.gz for a while
git-svn-id: file:///srv/repos/svn-packages/svn@69710 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libfetch/trunk/PKGBUILD
+++ b/libfetch/trunk/PKGBUILD
@@ -14,6 +14,9 @@ url="http://cvsweb.netbsd.org/bsdweb.cgi/pkgsrc/net/libfetch/"
 source=(Makefile
         ftp://ftp.archlinux.org/other/$pkgname/$pkgname-$pkgver.tar.gz)
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 # source PKGBUILD && mksource
 mksource() {
   export CVSROOT=:pserver:anoncvs@anoncvs.NetBSD.org:/cvsroot
