and also don't backup the logrotate file
git-svn-id: file:///srv/repos/svn-packages/svn@69716 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/dcron/trunk/PKGBUILD
+++ b/dcron/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="dillon's lightweight cron daemon"
 arch=(i686 x86_64)
 license=('GPL')
 url="http://www.jimpryor.net/linux/dcron"
-backup=(var/spool/cron/root etc/logrotate.d/crond)
+backup=(var/spool/cron/root)
 depends=('glibc')
 provides=('cron')
 groups=('base')
