FS#16710 - Thanks drmikehenry
git-svn-id: file:///srv/repos/svn-packages/svn@69722 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,7 +11,7 @@ arch=('i686' 'x86_64')
 license=('custom:vim')
 url="http://www.vim.org"
 depends=('gpm' 'coreutils' 'perl')
-makedepends=('wget' 'sed' 'grep' 'gettext' 'curl')
+makedepends=('wget' 'sed' 'grep' 'gettext' 'curl' 'rsync' 'ruby')
 backup=(etc/vimrc)
 install=${pkgname}.install
 # we need the extra-stuff to get all patches applied smoothly
@@ -20,7 +20,7 @@ source=(ftp://ftp.vim.org/pub/vim/unix/vim-${_srcver}.tar.bz2 \
         ftp://ftp.vim.org/pub/vim/extra/vim-${_srcver}-lang.tar.gz \
         fetch_patches.sh fetch_runtime.sh vimrc archlinux.vim)
 md5sums=('f0901284b338e448bfd79ccca0041254' '35e04482f07c57221c9a751aaa3b8dac' \
-         'd8884786979e0e520c112faf2e176f05' '159d4d11ecaf85c06623a02c1f843d01' \
+         'd8884786979e0e520c112faf2e176f05' '9c8f6b302fc3f343962686b8cf4a0350' \
          '45c1c3c6aff7de0d8fc2a9d8cd5cec7d' '3f42c68545b5b1afb2e9a5b2731ef063' \
          '10353a61aadc3f276692d0e17db1478e')
 
@@ -39,7 +39,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --enable-gpm --enable-acl --with-x=no --disable-gui \
     --enable-multibyte --enable-cscope \
-    --enable-perlinterp
+    --enable-perlinterp --enable-rubyinterp
     #--with-global-runtime=/usr/share/vim --with-vim-name=vim \
   make || return 1
 }
