upgpkg: heimdal 1.3.1-3 build against e2fsprogs
git-svn-id: file:///srv/repos/svn-packages/svn@69755 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/heimdal/trunk/PKGBUILD
+++ b/heimdal/trunk/PKGBUILD
@@ -8,13 +8,12 @@
 
 pkgname=heimdal
 pkgver=1.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Implementation of Kerberos V5 libraries"
 arch=('i686' 'x86_64')
 url="http://www.h5l.org/"
 license=('custom')
-depends=('db>=4.8' 'openssl' 'sqlite3')
-# re-add e2fsprogs once its libcom_err is compatible
+depends=('db>=4.8' 'openssl' 'sqlite3' 'e2fsprogs')
 backup=(etc/krb5.conf)
 options=('!libtool' '!emptydirs')
 install=heimdal.install
@@ -106,8 +105,6 @@ build() {
 
   # Remove conflicts
   rm ${pkgdir}/usr/share/man/man5/ftpusers.5*		          # man-pages
-  rm ${pkgdir}/usr/lib/libcom_err.{a,so}                          # e2fsprogs
-  rm ${pkgdir}/usr/bin/compile_et                                 # e2fsprogs
   rm ${pkgdir}/usr/share/man/man3/{DES,DH,EVP,OpenSSL,RAND,RSA}*  # openssl (a bit overzealous...)
   rm ${pkgdir}/usr/share/man/man3/os.3*                           # erlang
 
