upgpkg: gvim 7.2.368-3 rebuild without ruby
git-svn-id: file:///srv/repos/svn-packages/svn@69764 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gvim/trunk/PKGBUILD
+++ b/gvim/trunk/PKGBUILD
@@ -5,13 +5,13 @@ pkgname=gvim
 _srcver=7.2
 _patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=2
+pkgrel=3
 pkgdesc="the vim text editor with advanced features enabled, such as a gui mode"
 arch=('i686' 'x86_64')
 license=('custom:vim')
 url="http://www.vim.org"
 depends=("vim>=${pkgver}" 'python' 'libxt' 'desktop-file-utils' 'gtk2')
-makedepends=('pkgconfig' 'sed' 'perl' 'curl' 'rsync' 'ruby')
+makedepends=('pkgconfig' 'sed' 'perl' 'curl' 'rsync')
 install=${pkgname}.install
 source=(ftp://ftp.vim.org/pub/vim/unix/vim-${_srcver}.tar.bz2 \
         ftp://ftp.vim.org/pub/vim/extra/vim-${_srcver}-extra.tar.gz \
@@ -36,7 +36,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --with-x=yes --disable-gpm --enable-gui=gtk2 \
     --enable-multibyte --enable-cscope --enable-netbeans \
-    --enable-perlinterp --enable-pythoninterp --enable-rubyinterp
+    --enable-perlinterp --enable-pythoninterp
 
   make || return 1
 }
