upgpkg: qtcurve-kde4 1.1.0-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@69825 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qtcurve-kde4/trunk/PKGBUILD
+++ b/qtcurve-kde4/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id: $
+# Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=qtcurve-kde4
-pkgver=1.0.2
+pkgver=1.1.0
 pkgrel=1
 arch=('i686' 'x86_64')
 groups=('qtcurve')
@@ -12,7 +13,7 @@ url='http://www.kde-look.org/content/show.php?content=40492'
 source=("http://craigd.wikispaces.com/file/view/QtCurve-KDE4-${pkgver}.tar.bz2")
 depends=('kdebase-workspace')
 makedepends=('cmake' 'automoc4')
-md5sums=('4d8ae3c3ee633029bc95953093b7f3f1')
+md5sums=('319a17075cb96be6d7e0a1f1f41a7868')
 
 build() {
 	cd $srcdir
@@ -21,10 +22,10 @@ build() {
 	cmake ../QtCurve-KDE4-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
-	make
+	make || return 1
 }
 
 package() {
 	cd $srcdir/build
-	make DESTDIR=$pkgdir install
+	make DESTDIR=$pkgdir install || return 1
 }
