upgpkg: qtcurve-gtk2 1.1.0-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@69830 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qtcurve-gtk2/trunk/PKGBUILD
+++ b/qtcurve-gtk2/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id: $
+# Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=qtcurve-gtk2
-pkgver=1.0.2
+pkgver=1.1.0
 pkgrel=1
 arch=('i686' 'x86_64')
 groups=('qtcurve')
@@ -13,7 +14,7 @@ source=("http://craigd.wikispaces.com/file/view/QtCurve-Gtk2-${pkgver}.tar.bz2")
 depends=('gtk2')
 makedepends=('pkgconfig' 'cmake')
 options=('!libtool')
-md5sums=('db32106c386031f74bffb011f1af9c3e')
+md5sums=('5e7faa04bbf6eba8bc05e4502f295a6a')
 
 build() {
 	cd $srcdir
@@ -22,10 +23,10 @@ build() {
 	cmake ../QtCurve-Gtk2-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
-	make
+	make || return 1
 }
 
 package() {
 	cd $srcdir/build
-	make DESTDIR=$pkgdir install
+	make DESTDIR=$pkgdir install || return 1
 }
