upgpkg: qtcurve-kde3 1.1.0-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@69855 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qtcurve-kde3/trunk/PKGBUILD
+++ b/qtcurve-kde3/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=qtcurve-kde3
-pkgver=1.0.0
+pkgver=1.1.0
 pkgrel=1
 arch=('i686' 'x86_64')
 groups=('qtcurve')
@@ -11,8 +11,8 @@ pkgdesc='A configurable set of widget styles for KDE and Gtk'
 url='http://www.kde-look.org/content/show.php?content=40492'
 source=("http://craigd.wikispaces.com/file/view/QtCurve-KDE3-${pkgver}.tar.bz2" 'kdeglobals')
 depends=('kdelibs3')
-makedepends=('cmake')
-md5sums=('b3bd5675fc954a4a01e691e7d5be35ee'
+makedepends=('cmake' 'kdelibs')
+md5sums=('1e4f58cf6333e2c5130fa35b38959c89'
          '05a6294c7f0e239e698e7e5224fc8e7f')
 
 build() {
