added install script to suggest restarting when upgrading to 4.x
git-svn-id: file:///srv/repos/svn-packages/svn@70023 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/dcron/trunk/PKGBUILD
+++ b/dcron/trunk/PKGBUILD
@@ -20,6 +20,7 @@ md5sums=('02d848ba043a9df5bf2102a9f4bc04bd'
 	 '73693cdd59df526e729cdec99c5ed8fb'
 	 '5bfa07beb54d0beaf3f38225e4d5a9fa')
 optdepends=('smtp-server: sending cron job output via email')
+install=$pkgname.install
 
 build() {
 	cd "$srcdir/${pkgname}-${pkgver}" || return 1
