fix FS#18422 wrong sed -ie command
git-svn-id: file:///srv/repos/svn-packages/svn@70048 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/iptables/trunk/PKGBUILD
+++ b/iptables/trunk/PKGBUILD
@@ -25,8 +25,8 @@ build() {
   cd ${srcdir}/${pkgname}-${pkgver}
 
   # http://bugs.archlinux.org/task/17046
-  sed -ie '87 i libxt_RATEEST.so: libxt_RATEEST.oo' extensions/GNUmakefile.in
-  sed -ie '88 i \\t${AM_VERBOSE_CCLD} ${CCLD} ${AM_LDFLAGS} -lm -shared ${LDFLAGS} -o $@ $<;\n' extensions/GNUmakefile.in
+  sed -i '87 i libxt_RATEEST.so: libxt_RATEEST.oo' extensions/GNUmakefile.in
+  sed -i '88 i \\t${AM_VERBOSE_CCLD} ${CCLD} ${AM_LDFLAGS} -lm -shared ${LDFLAGS} -o $@ $<;\n' extensions/GNUmakefile.in
 
  ./configure --prefix=/usr --with-kernel=usr/src/linux-$(uname -r) \
 	--libexecdir=/usr/lib/iptables --sysconfdir=/etc \
