upgpkg: nicotine 1.2.15-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@70150 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nicotine/trunk/PKGBUILD
+++ b/nicotine/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Andrew Wright <andreww@photism.org>
 
 pkgname=nicotine
-pkgver=1.2.12
-pkgrel=3
+pkgver=1.2.15
+pkgrel=1
 pkgdesc="Soulseek music-sharing client, written in python"
 license=('GPL')
 arch=('i686' 'x86_64')
 depends=('pygtk>=2.14.1' 'mutagen' 'python-geoip>=1.2.4')
 conflicts=(nicotine-plus)
 replaces=(nicotine-plus)
-url="http://nicotine-plus.sourceforge.net"
-source=(http://www.nicotine-plus.org/files/nicotine+-${pkgver}.tar.bz2)
-md5sums=('83647f0578359ed27593e2f424deade8')
+url="http://sourceforge.net/projects/nicotine-plus/"
+source=(http://downloads.sourceforge.net/project/nicotine-plus/nicotine-plus/${pkgver}/${pkgname}+-${pkgver}.tar.bz2)
+md5sums=('05dbaa15f51509f376833dfb0ad4e8ad')
 optdepends=('python-sexy: To enable spell checking'
 	    'python-geoip: to enable Geographical blocker')
 
