--- a/epiphany-extensions/trunk/PKGBUILD
+++ b/epiphany-extensions/trunk/PKGBUILD
@@ -2,19 +2,18 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=epiphany-extensions
-pkgver=2.28.1
+pkgver=2.29.91
 pkgrel=1
-_majorver=2.28
 url="http://www.gnome.org/projects/epiphany/"
 pkgdesc="Various extentions for the Epiphany web browser"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
-depends=('epiphany>=2.28.1' 'python>=2.6' 'opensp' 'libglade>=2.6.4')
-makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool')
+depends=('epiphany>=2.29.91' 'python>=2.6' 'opensp')
+makedepends=('pkgconfig' 'gnome-doc-utils>=0.19.5' 'intltool')
 options=('!libtool' '!emptydirs')
 install=epiphany-extensions.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('0f14413316ebbdba392c9df7468d0d08811376ee26c735d7e523fc4eba44572a')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('19a43eaaa0871e7abe3c0ef013754ae3431e36accdd3d4311c651b9d159fd9cd')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
